Changed relative ajax link path to absolute

--- a/fhsa/v4/transfersin.html
+++ b/fhsa/v4/transfersin.html
@@ -444,7 +444,7 @@
 <h3 class="modal-title">Allowable FHSA deduction</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#allowablefhsa"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#allowablefhsa"></section>
 </div>
 </section>
 
@@ -453,7 +453,7 @@
 <h3 class="modal-title">Annual FHSA limit</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#annualfhsa"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#annualfhsa"></section>
 </div>
 </section>
 
@@ -462,7 +462,7 @@
 <h3 class="modal-title">Annuitant</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#annuitant"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#annuitant"></section>
 </div>
 </section>
 
@@ -471,7 +471,7 @@
 <h3 class="modal-title">Common-law partner</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#comlaw"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#comlaw"></section>
 </div>
 </section>
 
@@ -480,7 +480,7 @@
 <h3 class="modal-title">Designated amounts</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#designatedamounts"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#designatedamounts"></section>
 </div>
 </section>
 
@@ -489,7 +489,7 @@
 <h3 class="modal-title">Excess FHSA amount</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#excessfhsa"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#excessfhsa"></section>
 </div>
 </section>
 
@@ -498,7 +498,7 @@
 <h3 class="modal-title">Exempt period</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#exemptperiod"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#exemptperiod"></section>
 </div>
 </section>
 
@@ -507,7 +507,7 @@
 <h3 class="modal-title">Fair market value (FMV)</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#fmv"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#fmv"></section>
 </div>
 </section>
 
@@ -516,7 +516,7 @@
 <h3 class="modal-title">FHSA carryforward</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#fhsacarry"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#fhsacarry"></section>
 </div>
 </section>
 
@@ -525,7 +525,7 @@
 <h3 class="modal-title">FHSA deduction</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#fhsadeduction"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#fhsadeduction"></section>
 </div>
 </section>
 
@@ -534,7 +534,7 @@
 <h3 class="modal-title">FHSA participation room</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#fhsapartroom"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#fhsapartroom"></section>
 </div>
 </section>
 
@@ -543,7 +543,7 @@
 <h3 class="modal-title">First-time home buyer</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#firsttimehb"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#firsttimehb"></section>
 </div>
 </section>
 
@@ -552,7 +552,7 @@
 <h3 class="modal-title">Holder</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#holder"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#holder"></section>
 </div>
 </section>
 
@@ -561,7 +561,7 @@
 <h3 class="modal-title">Issuer</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#issuer"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#issuer"></section>
 </div>
 </section>
 
@@ -570,7 +570,7 @@
 <h3 class="modal-title">Lifetime FHSA limit</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#lifetimefhsa"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#lifetimefhsa"></section>
 </div>
 </section>
 
@@ -579,7 +579,7 @@
 <h3 class="modal-title">Maximum participation period</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#maxpart"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#maxpart"></section>
 </div>
 </section>
 
@@ -588,7 +588,7 @@
 <h3 class="modal-title">Non-qualified investment</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#nonqualinv"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#nonqualinv"></section>
 </div>
 </section>
 
@@ -597,7 +597,7 @@
 <h3 class="modal-title">Property</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#propfhsa"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#propfhsa"></section>
 </div>
 </section>
 
@@ -606,7 +606,7 @@
 <h3 class="modal-title">Qualified donee</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#qualdonee"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#qualdonee"></section>
 </div>
 </section>
 
@@ -615,7 +615,7 @@
 <h3 class="modal-title">Qualified investment</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#qualinv"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#qualinv"></section>
 </div>
 </section>
 
@@ -624,7 +624,7 @@
 <h3 class="modal-title">Qualifying home</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#qualhome"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#qualhome"></section>
 </div>
 </section>
 
@@ -633,7 +633,7 @@
 <h3 class="modal-title">Qualifying individual</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#qualindividual"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#qualindividual"></section>
 </div>
 </section>
 
@@ -642,7 +642,7 @@
 <h3 class="modal-title">Qualifying withdrawal</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#qualwith"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#qualwith"></section>
 </div>
 </section>
 
@@ -651,7 +651,7 @@
 <h3 class="modal-title">Registered retirement income fund (RRIF)</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#rrif"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#rrif"></section>
 </div>
 </section>
 
@@ -660,7 +660,7 @@
 <h3 class="modal-title">Registered retirement saving plan (RRSP)</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#rrsp"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#rrsp"></section>
 </div>
 </section>
 
@@ -669,7 +669,7 @@
 <h3 class="modal-title">Spouse</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#spouse"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#spouse"></section>
 </div>
 </section>
 
@@ -678,7 +678,7 @@
 <h3 class="modal-title">Successor holder</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#successorholder"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#successorholder"></section>
 </div>
 </section>
 
@@ -687,7 +687,7 @@
 <h3 class="modal-title">Survivor</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#survivor"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#survivor"></section>
 </div>
 </section>
 
@@ -696,7 +696,7 @@
 <h3 class="modal-title">Unused FHSA contributions</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#unusedfhsacont"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#unusedfhsacont"></section>
 </div>
 </section>
 
@@ -705,7 +705,7 @@
 <h3 class="modal-title">Unused FHSA participation room</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#unusedfhsapart"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#unusedfhsapart"></section>
 </div>
 </section>
 
@@ -714,7 +714,7 @@
 <h3 class="modal-title">Unused RRSP deduction room</h3>
 </header>
 <div class="modal-body">
-<section data-ajax-replace="/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#unusedrrsp"></section>
+<section data-ajax-replace="https://www.canada.ca/content/canadasite/en/revenue-agency/services/tax/individuals/topics/first-home-savings-account/definitions.html#unusedrrsp"></section>
 </div>
 </section>
 
@@ -967,11 +967,11 @@ Other reason
 
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
-<script src="/etc/designs/canada/wet-boew/js/ep-pp.min.js"></script>
-<script src="/etc/designs/canada/wet-boew/js/wet-boew.min.js"></script>
-<script src="/etc/designs/canada/wet-boew/js/theme.min.js"></script>
+<script src="https://www.canada.ca/etc/designs/canada/wet-boew/js/ep-pp.min.js"></script>
+<script src="https://www.canada.ca/etc/designs/canada/wet-boew/js/wet-boew.min.js"></script> 
+<script src="https://www.canada.ca/etc/designs/canada/wet-boew/js/theme.min.js"></script>
 
-<script src="/etc/designs/canada/wet-boew/méli-mélo/2023-10-mount-revelstoke.min.js"></script>
+<script src="https://www.canada.ca/etc/designs/canada/wet-boew/méli-mélo/2023-10-mount-revelstoke.min.js"></script>
 
 </body>
 </html>
