--- a/fhsa/v4/opening.html
+++ b/fhsa/v4/opening.html
@@ -1080,8 +1080,8 @@ Other reason
 	
 	let chckbxGroupElm = $(":input[type=checkbox][name=action-checkbox]"), 
 	    chckElms = $(":input[type=checkbox][name=action-checkbox]:checked"), 
-            partialChckGroup = $(":input[type=checkbox][name=action-checkbox][value=additional]"),
-            partialChckElms = $(":input[type=checkbox][name=action-checkbox][value=additional]:checked"), 
+            partialChckGroup = $(":input[type=checkbox][name=action-checkbox][value=true]"),
+            partialChckElms = $(":input[type=checkbox][name=action-checkbox][value=true]:checked"), 
             updateCheckboxes = function(chkbxGroup, chkbxChecked, validID, invalidID) { 
             if (chkbxGroup.length === chkbxChecked.length) {                
                 $("#" + invalidID).addClass("hidden").removeClass("visible");
