--- a/fhsa/v4/opening.html
+++ b/fhsa/v4/opening.html
@@ -1092,8 +1092,8 @@ Other reason
             }
 	};
 
-	chckbxGroupElm.change(function () {updateCheckboxes(chckbxGroupElm, chckElms, "action-all-qualify-msg", "action-all-not-qualify-msg")});
-	partialChckGroup.change(function () {updateCheckboxes(partialChckGroup, partialChckElms, "action-qualify-msg", "action-not-qualify-msg")});
+	chckbxGroupElm.change(function () {updateCheckboxes($(":input[type=checkbox][name=action-checkbox]"), $(":input[type=checkbox][name=action-checkbox]:checked"), "action-all-qualify-msg", "action-all-not-qualify-msg")});
+	partialChckGroup.change(function () {updateCheckboxes( $(":input[type=checkbox][name=action-checkbox][value=true]"), $(":input[type=checkbox][name=action-checkbox][value=true]:checked"), "action-qualify-msg", "action-not-qualify-msg")});
 </script>
 </body>
 </html>
